--- a/core/themes/seven/style.css
+++ b/core/themes/seven/style.css
@@ -5,7 +5,19 @@
 body {
   color: #000;
   background: #fff;
-  font: normal 81.3%/1.538em "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+  font-size:16px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+
+}
+
+strong, b, legend {
+	font-family:"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: normal !important;
+}
+
+.messages {
+	font-size: .85em;
 }
 a {
   color: #0074bd;
@@ -181,11 +193,17 @@ pre {
   overflow: hidden;
   padding: 20px 20px 0 20px; /* LTR */
   position: relative;
-  background-color: #e0e0d8;
+  background-color: /*#e0e0d8*/ #000000;
+  color: #eee;
 }
-#branding div.breadcrumb {
+#branding nav.breadcrumb {
   font-size: 0.846em;
   padding-bottom: 5px;
+  
+}
+
+#branding nav.breadcrumb a {
+	color: #bbb;
 }
 #branding div.block {
   position: relative;
@@ -234,11 +252,11 @@ pre {
   padding-top: 20px;
 }
 #branding h1.page-title {
-  color: #000;
+  color: #fff;
   margin: 0;
   padding-bottom: 10px;
   font-size: 1.385em;
-  font-weight: normal;
+  font-weight: 300;
   float: left; /* LTR */
 }
 
@@ -277,12 +295,12 @@ ul.primary li.active a {
   height: 2.60em;
   line-height: 2.60em;
   padding: 0 18px 8px;
-  background-color: #a6a7a2;
+  background-color: #aaa;
   color: #000;
-  font-weight: bold;
+  /*font-weight: bold;*/
   border-width: 1px 1px 0 1px;
   border-style: solid;
-  border-color: #a6a7a2;
+  border-color: #aaa;
   -moz-border-radius: 8px 8px 0 0;
   border-radius: 8px 8px 0 0;
 }
@@ -381,12 +399,16 @@ ul.admin-list li {
   position: relative;
   padding-left: 30px; /* LTR */
   padding-top: 9px;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #ddd;
   margin-left: 0; /* LTR */
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   background: url(images/list-item.png) no-repeat 0 11px; /* LTR */
   list-style-type: none;
   list-style-image: none;
+}
+
+ul.admin-list li:first-child {
+	border-top: none;
 }
 .admin-panel .item-list ul,
 ul.admin-list {
@@ -438,7 +460,7 @@ table {
 table td,
 table th {
   vertical-align: middle;
-  padding: 8px 10px;
+  padding: 16px;
   border: 0;
   color: #000;
 }
@@ -446,29 +468,29 @@ tr.even,
 tr.odd {
   border-width: 0 1px 0 1px;
   border-style: solid;
-  border-color: #bebfb9;
-  background: #f3f4ee;
+  border-color: #bbb;
+  background: #eee;
 }
 tr.odd {
   background: #fff;
 }
 tr.drag {
-  background: #fe7;
+  background: #eee;
 }
 tr.drag-previous {
-  background: #ffb;
+  background: #eee;
 }
 table th {
   text-transform: uppercase;
-  background: #e1e2dc;
+  background: #eee;
   font-weight: normal;
   border-width: 1px;
   border-style: solid;
-  border-color: #bebfb9;
-  padding: 3px 10px;
+  border-color: #bbb;
+ /* padding: 3px 10px;*/
 }
 table th.active {
-  background: #bdbeb9;
+  background: #bbb;
 }
 table th a {
   display: block;
@@ -483,15 +505,15 @@ table th.active img {
   right: 3px; /* LTR */
 }
 table td.active {
-  background: #e9e9dd;
+  background: #eee;
 }
 table tr.odd td.active {
-  background: #f3f4ee;
+  background: #eee;
 }
 table tr.selected td.active,
 table tr.selected td {
   background: #ffc;
-  border-color: #eeb;
+  border-color: #eee;
 }
 table.system-status-report tr {
   border-bottom: 1px solid #ccc;
@@ -649,7 +671,7 @@ a.button {
   text-align: center;
   font-weight: normal;
   font-size: 1.077em;
-  font-family: "Lucida Grande", Verdana, sans-serif;
+  /*font-family: "Lucida Grande", Verdana, sans-serif;*/
   border: 1px solid #e4e4e4;
   border-bottom: 1px solid #b4b4b4;
   border-left-color: #d2d2d2;
@@ -857,7 +879,7 @@ ol.task-list {
 }
 ol.task-list li {
   padding: 0.5em 1em 0.5em 20px; /* LTR */
-  color: #adadad;
+  color: #ccc;
 }
 ol.task-list li.active {
   background: transparent url(images/task-item.png) no-repeat 3px 50%; /* LTR */
